--- a/Ionic\conFusion/package.json
+++ b/Ionic\conFusion/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/email-composer": "^4.3.0",
         "@ionic-native/local-notifications": "^4.3.0",
+        "@ionic-native/network": "^4.3.1",
         "@ionic-native/social-sharing": "^4.3.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
@@ -35,6 +36,7 @@
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-email": "^1.2.6",
+        "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -64,7 +66,8 @@
             "de.appplant.cordova.plugin.local-notification": {},
             "cordova-plugin-email": {},
             "cordova-plugin-x-socialsharing": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-network-information": {}
         },
         "platforms": [
             "android"
