--- a/Ionic\conFusion/package.json
+++ b/Ionic\conFusion/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/call-number": "^4.3.1",
         "@ionic-native/camera": "^4.3.1",
         "@ionic-native/core": "^3.12.1",
         "@ionic-native/email-composer": "^4.3.0",
@@ -48,7 +49,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.12",
+        "mx.ferreyra.callnumber": "~0.0.2"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.4",
@@ -67,7 +69,8 @@
             "cordova-plugin-email": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova-plugin-camera": {},
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "mx.ferreyra.callnumber": {}
         },
         "platforms": [
             "android"
