--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 *node_modules/*
+3.2.3.Exercise (Instructions)_ Using Cookies _ Coursera_files/0
+3.2.7.Exercise (Instructions)_ Express Sessions Part 2 _ Coursera.html
+3.3.2.vtt
+3.3.2.mp4
+3.3.1.vtt
+3.3.1.mp4
+3.2.6.vtt
+3.2.6.mp4
+3.2.5.Exercise (Instructions)_ Express Sessions Part 1 _ Coursera.html
+3.2.4.vtt
+3.2.4.mp4
+3.2.3.png
+3.2.3.Exercise (Instructions)_ Using Cookies _ Coursera.html
+3.2.2.vtt
+3.2.2.mp4
+3.2.1.vtt
+3.2.1.mp4
+3.2.3.Exercise (Instructions)_ Using Cookies _ Coursera_files/
+3.2.5.Exercise (Instructions)_ Express Sessions Part 1 _ Coursera_files/
+3.2.7.Exercise (Instructions)_ Express Sessions Part 2 _ Coursera_files/
