Express Session Part 1

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 3.2.3.Exercise (Instructions)_ Using Cookies _ Coursera_files/
 3.2.5.Exercise (Instructions)_ Express Sessions Part 1 _ Coursera_files/
 3.2.7.Exercise (Instructions)_ Express Sessions Part 2 _ Coursera_files/
+Node/conFusionServer/sessions/
